fix slider on mobile

--- a/assets/scss/includes/components/_work.scss
+++ b/assets/scss/includes/components/_work.scss
@@ -63,6 +63,10 @@
         box-shadow: 0px 0px 0px 10px rgba( 0, 0, 0, 0.1 );
         animation-delay: 0.1s;
         min-height: 300px;
+
+        @include respond-to( mobile ) {
+            min-height: 0px;
+        }
     }
 
     .work-item--active {
